fix: chat partner name spacing consistency

--- a/project/source/page/css/style.css
+++ b/project/source/page/css/style.css
@@ -634,7 +634,7 @@ a.new-notifications {
   position: absolute;
   padding: 0.5em;
   margin: 0.2em;
-  left: 7em;
+  margin-left: 3em;
   background-color: rgba(255, 255, 255, 0.85);
   border-radius: 1em;
 }
